--- a/submodules/callLogs/views/layout.html
+++ b/submodules/callLogs/views/layout.html
@@ -61,8 +61,10 @@
 			<div class="custom-range{{#compare type "===" "custom"}} active{{/compare}}">
 				<span>{{i18n.startDate}}</span>
 				<input id="startDate" type="text" class="date-filter filter-from">
+				<input id="startTime" type="text" class="time-filter filter-from-time">
 				<span>{{i18n.endDate}}</span>
 				<input id="endDate" type="text" class="date-filter filter-to">
+				<input id="endTime" type="text" class="time-filter filter-to-time">
 				<button type="button" class="apply-filter monster-button monster-button-primary" title="{{i18n.callLogs.applyFilter}}">{{i18n.filter}}</button>
 			</div>
 
