--- a/views/app.html
+++ b/views/app.html
@@ -1,5 +1,4 @@
-<div id="voip_container" class="clearfix container-menu">
-	<div class="right-content clearfix">
-		
+<div id="call_logs_container" class="clearfix container-menu">
+	<div class="table-wrapper clearfix">
 	</div>
 </div>
