--- a/submodules/callLogs/callLogs.css
+++ b/submodules/callLogs/callLogs.css
@@ -1,74 +1,75 @@
-#call_logs_container {
+#calls_grid {
 	min-width: 660px;
 }
 
-#call_logs_container .call-logs-header .title-div {
-	font-size: 24px;
-	height: 30px;
-	line-height: 30px;
-	margin-bottom: 10px;
-}
-#call_logs_container .call-logs-header .search-div input.search-query {
+#calls_grid .search-div input.search-query {
 	width: 140px;
 }
 
-#call_logs_container .sub-ranges {
+#calls_grid .sub-ranges {
 	margin-top: 5px;
+	height: 35px;
 }
 
-#call_logs_container .sub-ranges > * {
+#calls_grid .sub-ranges > * {
 	display: inline-block;
 }
 
-#call_logs_container .fixed-ranges {
+#calls_grid .fixed-ranges {
 	width: 100%;
 	height: 35px;
 	margin-top: 20px;
 }
 
-#call_logs_container .fixed-ranges .btn-toolbar {
+#calls_grid .fixed-ranges .btn-toolbar {
 	margin-top: 0;
 }
 
-#call_logs_container .fixed-ranges-date {
+#calls_grid .fixed-ranges-date {
 	margin-top: 10px;
 	margin-right: 30px;
 }
 
-#call_logs_container .fixed-ranges-date .highlight-date {
+#calls_grid .fixed-ranges-date .highlight-date {
 	color: #22a5ff;
 	font-weight: bold;
 	margin: 0 5px;
 }
 
-#call_logs_container .custom-range {
+#calls_grid .custom-range {
 	display: none;
 	margin-right: 15px;
 }
 
-#call_logs_container .custom-range.active {
+#calls_grid .custom-range.active {
 	display: inline-block;
 }
 
-#call_logs_container .custom-range > * {
+#calls_grid .custom-range > * {
 	margin: 0 10px 0 0;
 	vertical-align: middle;
 }
 
-#call_logs_container .custom-range > span {
+#calls_grid .custom-range > span {
 	margin-right: 5px;
 }
 
-#call_logs_container .custom-range input.date-filter,
-#call_logs_container .custom-range input.time-filter {
+#calls_grid .custom-range input.date-filter,
+#calls_grid .custom-range input.time-filter {
 	width: 80px;
 }
 
-#call_logs_container .call-logs-content {
+#calls_grid .button-row {
+	width: 100%;
+	height: 60px;
+	margin-top: 20px;
+}
+
+#calls_grid .call-logs-content {
 	margin-top: 30px;
 }
 
-#call_logs_container .call-logs-grid {
+#calls_grid .call-logs-grid {
 	background-color: #f6f6f6;
 	border-bottom: solid 2px #ddd;
 	border-radius: 2px;
@@ -76,24 +77,24 @@
 	overflow: auto;
 }
 
-#call_logs_container .grid-row-group:not(:last-of-type) {
+#calls_grid .grid-row-group:not(:last-of-type) {
 	border-bottom: solid 1px #e3e3e3;
 }
-#call_logs_container .grid-row-group:first-of-type {
+#calls_grid .grid-row-group:first-of-type {
 	border-bottom: solid 1px #ddd;
 }
-#call_logs_container .grid-row-group .grid-row:not(:first-of-type) {
+#calls_grid .grid-row-group .grid-row:not(:first-of-type) {
 	border-top: solid 1px #e3e3e3;
 }
-#call_logs_container .grid-row-group:last-of-type:not(.open) .main-leg {
+#calls_grid .grid-row-group:last-of-type:not(.open) .main-leg {
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 }
-#call_logs_container .grid-row-group.open:last-of-type .extra-leg:last-of-type {
+#calls_grid .grid-row-group.open:last-of-type .extra-leg:last-of-type {
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 }
-#call_logs_container .grid-row.header-row {
+#calls_grid .grid-row.header-row {
 	background-color: #22a5ff;
 	color: #fff;
 	text-shadow: 1px 1px 1px #666666;
@@ -101,35 +102,35 @@
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 }
-#call_logs_container .grid-row:not(.header-row) {
+#calls_grid .grid-row:not(.header-row) {
 	font-size: 13px;
 }
-#call_logs_container .grid-row:not(.header-row) > .grid-cell:first-child {
+#calls_grid .grid-row:not(.header-row) > .grid-cell:first-child {
 	border-left: solid 2px #ddd;
 }
-#call_logs_container .grid-row:not(.header-row) > .grid-cell:last-child {
+#calls_grid .grid-row:not(.header-row) > .grid-cell:last-child {
 	border-right: solid 2px #ddd;
 }
-#call_logs_container .grid-row.no-match {
+#calls_grid .grid-row.no-match {
 	display: none;
 }
 /*
-#call_logs_container .grid-row-group:not(.open) .grid-row.main-leg > .grid-cell:first-child {
+#calls_grid .grid-row-group:not(.open) .grid-row.main-leg > .grid-cell:first-child {
 	border-left: solid 2px #22a5ff;
 }
-#call_logs_container .grid-row-group.open .grid-row > .grid-cell:first-child {
+#calls_grid .grid-row-group.open .grid-row > .grid-cell:first-child {
 	border-left: solid 2px #44cc44;
 }
 */
-#call_logs_container .grid-row.main-leg:hover {
+#calls_grid .grid-row.main-leg:hover {
 	background-color: #eee;
 	cursor: pointer;
 }
-#call_logs_container .grid-row-group .extra-legs {
+#calls_grid .grid-row-group .extra-legs {
 	display: none;
 }
 
-#call_logs_container .grid-row-group .extra-legs .loading-container {
+#calls_grid .grid-row-group .extra-legs .loading-container {
 	background: #fff;
 	border-left: 1px solid #ddd;
 	border-top: 1px solid #ddd;
@@ -137,16 +138,16 @@
 	text-align: center;
 }
 
-#call_logs_container .grid-row-group .extra-legs .loading-container i {
+#calls_grid .grid-row-group .extra-legs .loading-container i {
 	margin-left: 10px;
 }
 
-#call_logs_container .grid-row.extra-leg {
+#calls_grid .grid-row.extra-leg {
 	background-color: #fcfcfc;
 	border-top: solid 1px #e3e3e3;
 }
 
-#call_logs_container .grid-cell {
+#calls_grid .grid-cell {
 	display: inline-block;
 	padding: 10px 5px;
 	box-sizing: border-box;
@@ -155,66 +156,66 @@
 	text-align: center;
 	vertical-align: bottom;
 }
-#call_logs_container .grid-cell.high-cell {
+#calls_grid .grid-cell.high-cell {
 	padding-top: 0;
 	padding-bottom: 0;
 }
-#call_logs_container .grid-cell:not(:first-of-type) {
+#calls_grid .grid-cell:not(:first-of-type) {
 	border-left: solid 1px #e3e3e3;
 }
 
-#call_logs_container .grid-cell.direction {
+#calls_grid .grid-cell.direction {
 	width: 10%;
 }
-#call_logs_container .grid-cell.datetime {
+#calls_grid .grid-cell.datetime {
 	width: 11%;
 }
-#call_logs_container .grid-cell.from {
+#calls_grid .grid-cell.from {
 	width: 23%;
 }
-#call_logs_container .grid-cell.to {
+#calls_grid .grid-cell.to {
 	width: 23%;
 }
-#call_logs_container .grid-cell.duration {
+#calls_grid .grid-cell.duration {
 	width: 8%;
 }
-#call_logs_container .grid-cell.hangup {
+#calls_grid .grid-cell.hangup {
 	width: 14%;
 }
-#call_logs_container .grid-cell.full-width {
+#calls_grid .grid-cell.full-width {
 	width: 100%;
 }
-#call_logs_container .grid-row:not(.header-row) .grid-cell.hangup .cause-title {
+#calls_grid .grid-row:not(.header-row) .grid-cell.hangup .cause-title {
 	text-transform: capitalize;
 	font-size: 12px;
 	font-style: italic;
 }
-#call_logs_container .grid-cell.actions {
+#calls_grid .grid-cell.actions {
 	width: 11%;
 }
-#call_logs_container .grid-cell.actions i:hover {
+#calls_grid .grid-cell.actions i:hover {
 	color: #22a5ff;
 	cursor: pointer;
 }
 
-#call_logs_container .sub-cell {
+#calls_grid .sub-cell {
 	height: 20px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
-#call_logs_container .sub-cell.single-cell {
+#calls_grid .sub-cell.single-cell {
 	height: 40px;
 	line-height: 40px;
 }
 
-#call_logs_container .hangup .sub-cell.single-cell {
+#calls_grid .hangup .sub-cell.single-cell {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	line-height: normal;
 }
 
-#call_logs_container .call-logs-loader {
+#calls_grid .call-logs-loader {
 	margin-top: 10px;
 	padding: 10px;
 	border: solid 1px #999;
@@ -223,19 +224,19 @@
 	background-color: #eaeaea;
 }
 
-#call_logs_container .call-logs-loader .loader-message {
+#calls_grid .call-logs-loader .loader-message {
 	cursor: pointer;
 }
 
-#call_logs_container .call-logs-loader.loading .loader-message {
+#calls_grid .call-logs-loader.loading .loader-message {
 	display: none;
 }
 
-#call_logs_container .call-logs-loader:not(.loading) .loading-message {
+#calls_grid .call-logs-loader:not(.loading) .loading-message {
 	display: none;
 }
 
-#call_logs_container .call-logs-loader .loading-message i {
+#calls_grid .call-logs-loader .loading-message i {
 	margin-right: 10px;
 }
 
@@ -249,13 +250,13 @@
 }
 
 /********************** COLORBLIND SETTINGS **********************/
-body.colorblind #call_logs_container .grid-row:not(.header-row) .grid-cell.direction {
+body.colorblind #calls_grid .grid-row:not(.header-row) .grid-cell.direction {
 	background-color: #999;
 }
-body.colorblind #call_logs_container .grid-cell.direction .monster-green {
+body.colorblind #calls_grid .grid-cell.direction .monster-green {
 	color: #EEE !important;
 }
-body.colorblind #call_logs_container .grid-cell.direction .monster-orange {
+body.colorblind #calls_grid .grid-cell.direction .monster-orange {
 	color: #222 !important;
 }
 
@@ -264,12 +265,12 @@ body.colorblind #call_logs_container .grid-cell.direction .monster-orange {
 	display: none; /* Hide scrollbar in WebKit browsers */
 }
 
-#call_logs_container .reload-button { 
+#calls_grid .download-button { 
 	padding-left: 5px;
 }
 
-#call_logs_container .monster-button.reload-cdrs,
-#call_logs_container .monster-button.download-csv {
+#calls_grid .monster-button.reload-cdrs,
+#calls_grid .monster-button.download-csv {
     width: auto;
     display: inline-flex;
     align-items: center;
@@ -277,14 +278,14 @@ body.colorblind #call_logs_container .grid-cell.direction .monster-orange {
     height: 38px;
 }
 
-#call_logs_container .grid-row-group.open .grid-row.main-leg {
+#calls_grid .grid-row-group.open .grid-row.main-leg {
     font-weight: 600;
 }
 
-#call_logs_container .grid-row-group.open .grid-row {
+#calls_grid .grid-row-group.open .grid-row {
     background: color-mix(in srgb, #22a5ff 6%, transparent) !important;
 }
 
-#call_logs_container .grid-row-group.open .grid-row > .grid-cell:first-child {
+#calls_grid .grid-row-group.open .grid-row > .grid-cell:first-child {
 	border-left: solid 2px #22a5ff;
 }
