--- a/submodules/callLogs/views/layout.html
+++ b/submodules/callLogs/views/layout.html
@@ -130,7 +130,8 @@
 			</div>
 		</div>
 
-		<div class="call-logs-grid">
+		<div class="call-logs-grid-wrapper">
+			<div class="call-logs-grid">
 			<div class="grid-row-group">	
 			</div>
 			<div class="grid-row no-match">
@@ -146,6 +147,7 @@
 				<div class="grid-cell full-width">{{i18n.table.empty}}</div>
 			</div>
 			{{/unless}}
+			</div>
 		</div>
 	</div>
 
