--- a/submodules/callLogs/callLogs.css
+++ b/submodules/callLogs/callLogs.css
@@ -71,7 +71,8 @@
 
 #calls_grid .call-logs-grid-wrapper {
 	max-height: 900px;
-	overflow: auto;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 #calls_grid .call-logs-grid {
